--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
+
+body {
+    
+font-family: 'Roboto Condensed', sans-serif;
+}
+
+.display-flex{
+    display: flex;
+}
+.h-color{
+    color:orange ;
+}
 h1{
-    color: blue;
+    font-size: 70px;
+    font-weight: 700;
+}
+.h4-color{
+    color: gray;
+}
+.half-width{
+    width: 50%;
+    padding: 5%;
+    
+}
+.target-blank{
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato );
+    padding: 10px 30px;
+    border-radius: 20px;
+    font-weight: 700;
+    color: white;
 }
