--- a/style.css
+++ b/style.css
@@ -73,3 +73,26 @@ h1{
 .title-two-p{
     padding: 20px;
 }
+
+.section-4-div{
+    display: flex;
+    width: 80%;
+    height: 250px;
+    margin-top: 60px;
+    margin-left: 70px;
+    margin-right: 70px;
+    box-shadow: 0 0 15px 5px gray;
+    border-radius: 10px;
+     
+   
+}
+
+.div-2-sectio-4{
+    width: 100%;
+    height:300px ;
+    text-align: center;
+    }
+.width-100{
+    width: 100%;
+    margin-left: 50px;
+}
