--- a/style.css
+++ b/style.css
@@ -1,8 +1,35 @@
 
 body {
-   
+    
 font-family: 'Roboto Condensed', sans-serif;
 }
+ 
+        ul{
+            list-style: none;
+            margin: 0px;
+            padding: 0px;
+            overflow: hidden;
+            background-color:orange;
+        }
+        li{
+            float: left;
+        }
+        li a{
+            display: block;
+            color: ;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        li a:hover{
+            background-color: gray;
+        }
+        .flot-right{
+            float: right;
+        }
+
+
+
 
 .display-flex{
     display: flex;
